# mlz-small-language-model

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  nn.py  notebook.ipynb  pyproject.toml  slm-k8s-deployment.yaml  test.py  train.py
models/: tiny_stories_tokenizer.json
src/: main.rs
