[package]
name    = "mlz-small-language-model"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.9", features = ["ndarray", "half"] }
ndarray    = "0.17"               # Tensors
rand       = "0.8"                # Sampling
anyhow     = "1.0"                # Error handling
tokio      = { version = "1", features = ["full"] }
minijinja  = "2.0"                # Simple prompt templating
serde      = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.20"               # HuggingFace tokenizers
axum = "0.8.8"
half = "2.7.1"
